<resources>
    <string name="app_name">RemindNote</string>
    <string name="action_settings">Настройки</string>


    <string name="title_activity_reminder_activity">reminder_activity</string>
    <string name="title_activity_main22">Diplom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_run_alert"><![CDATA[<b><h3>Создавайте Заметки Нажав на Кнопку Плюс<h3></b>]]></string>
    <string name="no_more_show_first_run">Не показывать</string>
    <string name="add_some_sample_notes">Добавить Несколько тестовых заметок</string>
    <string name="discard">Отмена</string>
    <string name="settings_for_developer">Для разработчика</string>
    <string name="delete_all_notes">Удалить все записи</string>
    <string name="delete_note">Удалить запись</string>
    <string name="notes">Заметки</string>
    <string name="reminders">Напоминания</string>
    <string name="reminders_sub_menu">Напоминания</string>
    <string name="personal">Персональные</string>
    <string name="birthdays">Дни рождения</string>
    <string name="other">Другие</string>
    <string name="completed">Завершенные</string>
    <string name="other_sub_menu">Другие</string>
    <string name="about_app">Про приложение</string>
    <string name="new_note_activity">Новая Заметка</string>
    <string name="new_note_editText">Пишите Здесь</string>
    <string name="splash_screen_loading">Загрузка ...</string>
    <string name="save_note">Сохранить</string>
    <string name="old_note_activity">Заметка</string>
    <string name="title_activity_new_reminder">Новое Напоминание</string>
    <string name="spinner_category_select">Выберите категорию</string>
    <string name="new_reminder_title">Новое Напоминание</string>
    <string name="new_reminder_date">Изменить Дату</string>
    <string name="new_reminder_time">Изменить Время</string>

    <!--spinner-->
    <string name="spinner_personal">Персональные</string>
    <string name="spinner_birthDays">Дни рождения</string>
    <string name="spinner_other">Другие</string>
    <string name="spinner_completed">Завершенные</string>
    <string name="reminder_add_date_button">Добавить Дату</string>
    <string name="reminder_add_time_button">Добавить Время</string>
    <string name="spinner_repeat_once">Однажды</string>
    <string name="spinner_repeat_1hour">Каждый час</string>
    <string name="spinner_repeat_1day">Каждый день</string>
    <string name="spinner_repeat_1week">Каждую неделю</string>
    <string name="spinner_repeat_1month">Каждый месяц</string>
    <string name="spinner_repeat_1year">Каждый год</string>
    <string name="old_reminder_title">Напоминание</string>
    <string name="note_empty">Создайте новую заметку</string>
    <string name="reminder_empty">Создайте новое напоминание</string>
    <string name="long_press_open">Открыть</string>
    <string name="long_press_delete">Удалить</string>
    <string name="site_agree">Вы хотите хранить записи на сайте?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="vibrate">Вибрировать?</string>
    <string name="saved">Сохранено</string>


</resources>
