<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:title="@string/settings_for_developer">
        <menu>
            <item
                android:id="@+id/add_sample_notes"
                android:orderInCategory="102"
                android:title="@string/add_some_sample_notes" />

            <item
                android:id="@+id/delete_all_notes"
                android:orderInCategory="103"
                android:title="@string/delete_all_notes" />
        </menu>
    </item>

</menu>
