<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rem_save"
        android:icon="@mipmap/ic_content_save"
        android:orderInCategory="99"
        android:title="@string/save_note"
        app:showAsAction="always"/>
    <item
        android:id="@+id/rem_delete"
        android:icon="@mipmap/ic_delete_variant"
        android:orderInCategory="100"
        android:title="@string/delete_note"
        app:showAsAction="always"/>
    <item
        android:id="@+id/note_discard"
        tools:ignore="AppCompatResource"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/discard"/>

</menu>