<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_new_reminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.home.diplom.view.ReminderActivity.NewReminderActivity"
    tools:showIn="@layout/activity_new_reminder">


    <!--TODO edittextm flows up when keyboard appears-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="0">

        <ScrollView
            android:id="@+id/hscroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <EditText
                        android:focusable="false"
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_note_editText"/>
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buttonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:fontFamily="serif"
            android:onClick="onClickDate"
            android:text="@string/reminder_add_date_button"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="normal|bold"/>

        <TextView
            android:id="@+id/buttonTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:fontFamily="serif"
            android:onClick="onClickTime"
            android:text="@string/reminder_add_time_button"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal|bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:entries="@array/spinnerItemsCategory"
            android:prompt="@string/spinner_category_select"/>

        <Spinner
            android:id="@+id/spinner_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:dropDownWidth="match_parent"
            android:entries="@array/spinnerItemsRepeat"/>

    </LinearLayout>

    <TextView
        android:id="@+id/DateTimeRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hscroll"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:textSize="18sp"/>

</LinearLayout>
